ada/vl53l1x_api_h.ads


   function VL53L1X_SetOffset (dev : vl53l1_platform_h.VL53L1_DEV; OffsetValue : sys_ustdint_h.int16_t) return VL53L1X_ERROR  -- ../core/VL53L1X_api.h:297
   with Import => True, 
        Convention => C, 
        External_Name => "VL53L1X_SetOffset";

   function VL53L1X_GetOffset (dev : vl53l1_platform_h.VL53L1_DEV; Offset : access sys_ustdint_h.int16_t) return VL53L1X_ERROR  -- ../core/VL53L1X_api.h:302
   with Import => True, 
        Convention => C, 
        External_Name => "VL53L1X_GetOffset";

   function VL53L1X_SetXtalk (dev : vl53l1_platform_h.VL53L1_DEV; XtalkValue : sys_ustdint_h.uint16_t) return VL53L1X_ERROR  -- ../core/VL53L1X_api.h:308
   with Import => True, 
        Convention => C, 
        External_Name => "VL53L1X_SetXtalk";

   function VL53L1X_GetXtalk (dev : vl53l1_platform_h.VL53L1_DEV; Xtalk : access sys_ustdint_h.uint16_t) return VL53L1X_ERROR  -- ../core/VL53L1X_api.h:313
   with Import => True, 
        Convention => C, 
        External_Name => "VL53L1X_GetXtalk";

   function VL53L1X_SetDistanceThreshold
     (dev : vl53l1_platform_h.VL53L1_DEV;
      ThreshLow : sys_ustdint_h.uint16_t;
      ThreshHigh : sys_ustdint_h.uint16_t;
      Window : sys_ustdint_h.uint8_t;
      IntOnNoTarget : sys_ustdint_h.uint8_t) return VL53L1X_ERROR  -- ../core/VL53L1X_api.h:328
   with Import => True, 
        Convention => C, 
        External_Name => "VL53L1X_SetDistanceThreshold";

   function VL53L1X_GetDistanceThresholdWindow (dev : vl53l1_platform_h.VL53L1_DEV; window : access sys_ustdint_h.uint16_t) return VL53L1X_ERROR  -- ../core/VL53L1X_api.h:335
   with Import => True, 
        Convention => C, 
        External_Name => "VL53L1X_GetDistanceThresholdWindow";

   function VL53L1X_GetDistanceThresholdLow (dev : vl53l1_platform_h.VL53L1_DEV; low : access sys_ustdint_h.uint16_t) return VL53L1X_ERROR  -- ../core/VL53L1X_api.h:340
   with Import => True, 
        Convention => C, 
        External_Name => "VL53L1X_GetDistanceThresholdLow";

   function VL53L1X_GetDistanceThresholdHigh (dev : vl53l1_platform_h.VL53L1_DEV; high : access sys_ustdint_h.uint16_t) return VL53L1X_ERROR  -- ../core/VL53L1X_api.h:345
   with Import => True, 
        Convention => C, 
        External_Name => "VL53L1X_GetDistanceThresholdHigh";

   function VL53L1X_SetROI
     (dev : vl53l1_platform_h.VL53L1_DEV;
      X : sys_ustdint_h.uint16_t;
      Y : sys_ustdint_h.uint16_t) return VL53L1X_ERROR  -- ../core/VL53L1X_api.h:353
   with Import => True, 
        Convention => C, 
        External_Name => "VL53L1X_SetROI";

   function VL53L1X_GetROI_XY
     (dev : vl53l1_platform_h.VL53L1_DEV;
      ROI_X : access sys_ustdint_h.uint16_t;
      ROI_Y : access sys_ustdint_h.uint16_t) return VL53L1X_ERROR  -- ../core/VL53L1X_api.h:358
   with Import => True, 
        Convention => C, 
        External_Name => "VL53L1X_GetROI_XY";

   function VL53L1X_SetROICenter (dev : vl53l1_platform_h.VL53L1_DEV; ROICenter : sys_ustdint_h.uint8_t) return VL53L1X_ERROR  -- ../core/VL53L1X_api.h:364
   with Import => True, 
        Convention => C, 
        External_Name => "VL53L1X_SetROICenter";

   function VL53L1X_GetROICenter (dev : vl53l1_platform_h.VL53L1_DEV; ROICenter : access sys_ustdint_h.uint8_t) return VL53L1X_ERROR  -- ../core/VL53L1X_api.h:369
   with Import => True, 
        Convention => C, 
        External_Name => "VL53L1X_GetROICenter";

   function VL53L1X_SetSignalThreshold (dev : vl53l1_platform_h.VL53L1_DEV; signal : sys_ustdint_h.uint16_t) return VL53L1X_ERROR  -- ../core/VL53L1X_api.h:374
   with Import => True, 
        Convention => C, 
        External_Name => "VL53L1X_SetSignalThreshold";

   function VL53L1X_GetSignalThreshold (dev : vl53l1_platform_h.VL53L1_DEV; signal : access sys_ustdint_h.uint16_t) return VL53L1X_ERROR  -- ../core/VL53L1X_api.h:379
   with Import => True, 
        Convention => C, 
        External_Name => "VL53L1X_GetSignalThreshold";

   function VL53L1X_SetSigmaThreshold (dev : vl53l1_platform_h.VL53L1_DEV; sigma : sys_ustdint_h.uint16_t) return VL53L1X_ERROR  -- ../core/VL53L1X_api.h:384
   with Import => True, 
        Convention => C, 
        External_Name => "VL53L1X_SetSigmaThreshold";

   function VL53L1X_GetSigmaThreshold (dev : vl53l1_platform_h.VL53L1_DEV; signal : access sys_ustdint_h.uint16_t) return VL53L1X_ERROR  -- ../core/VL53L1X_api.h:389
   with Import => True, 
        Convention => C, 
        External_Name => "VL53L1X_GetSigmaThreshold";

   function VL53L1X_StartTemperatureUpdate (dev : vl53l1_platform_h.VL53L1_DEV) return VL53L1X_ERROR  -- ../core/VL53L1X_api.h:396
   with Import => True, 
        Convention => C, 
        External_Name => "VL53L1X_StartTemperatureUpdate";

end VL53L1X_api_h;
